--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "loopback-getting-started-intermediate",
+  "name": "loopback",
   "version": "1.0.0",
   "main": "server/server.js",
   "scripts": {
@@ -8,17 +8,31 @@
     "posttest": "npm run lint && nsp check"
   },
   "dependencies": {
+    "angular-local-storage": "^0.7.1",
     "async": "^2.1.2",
+    "bcrypt": "^3.0.0",
+    "body-parser": "^1.18.3",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
+    "crypto": "^1.0.1",
+    "crypto-js": "^3.1.9-1",
+    "express-session": "^1.15.6",
+    "hash": "^0.2.1",
     "helmet": "^1.3.0",
+    "localStorage": "^1.0.3",
     "loopback": "^3.0.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^2.4.0",
     "loopback-connector-mongodb": "^1.17.0",
     "loopback-connector-mysql": "^2.4.0",
+    "loopback-context": "^3.3.0",
+    "ngstorage": "^0.3.11",
+    "password-hash": "^1.2.2",
+    "path": "^0.12.7",
+    "salt": "^0.5.5",
     "serve-favicon": "^2.0.1",
-    "strong-error-handler": "^1.0.1"
+    "strong-error-handler": "^1.0.1",
+    "utils": "^0.3.1"
   },
   "devDependencies": {
     "eslint": "^2.13.1",
